General | Resolved multiple issues with failed GNU key management during APT installs from non-standard repos. Dirmngr is now installed on all DietPi systems by default: https://github.com/Fourdee/DietPi/issues/1388
DietPi-Services | Service stop order is now reversed: https://github.com/Fourdee/DietPi/issues/1462#issue-294140894
DietPi-Set_Hardware | Resolved issues with serial consoles not be disabled without dbus installed. Serial consoles are now masked/unmasked (previously disabled): https://github.com/Fourdee/DietPi/issues/1482
DietPi-Software | Desktops: USB drive removed from .gtk-bookmarks as no longer used in DietPi.
DietPi-Software | Shairport-Sync: Resolved ARMv6 binary Illegal instruction: https://github.com/Fourdee/DietPi/issues/1548
DietPi-Software | Lighttpd: Resolved an issue with failed enable of php module, due to perl being a undocumented pre-req for 'lighttpd-enable-mod'.
DietPi-Software | MotionEye: Resolved failed installation due to missing build-essential pre-req: https://github.com/Fourdee/DietPi/issues/1564
DietPi-Update | Resolved an issue where .update_available would exist during reboot, causing banner to display update available incorrectly: https://github.com/Fourdee/DietPi/issues/1535
DietPi-LetsEncrypt | Lighttpd/Minio: Fixed auto renewal: https://github.com/Fourdee/DietPi/pull/1553
DietPi-LetsEncrypt | Minio: Fixed an issue, where port 443 listening would fail due to missing libcap2-bin/setcap package: https://github.com/Fourdee/DietPi/pull/1553#issuecomment-368261474

-----------------------------------------------------------------------------------------------------------

v6.2
(18/02/18)

Changes / Improvements / Optimizations:
Native PC UEFI | Image now includes options to install to either EMMC (eg: onboard) or SDA (1st HDD) device: https://github.com/Fourdee/DietPi/issues/1171#issuecomment-336522021 | http://dietpi.com/phpbb/viewtopic.php?f=9&t=2809&p=10808#p10808