@@ -328,11 +328,17 @@ _EOF_
 			# Odroids FFmpeg decendency fix: https://github.com/Fourdee/DietPi/issues/1556#issuecomment-369463910
 			if (( $G_HW_MODEL > 9 && $G_HW_MODEL < 15 )); then
 
+				rm /etc/apt/preferences.d/meveric*
 				cat << _EOF_ > /etc/apt/preferences.d/backports
 Package: *
 Pin: release a=jessie-backports
 Pin: origin "fuzon.co.uk"
-Pin-Priority: 99
+Pin-Priority: 100
+
+Package: *
+Pin: release a=jessie-backports
+Pin: origin "oph.mdrjr.net"
+Pin-Priority: 100
 _EOF_
 
 			fi
@@ -354,5 +360,5 @@ _EOF_
 	#-------------------------------------------------------------------------------
 	exit
 	#-------------------------------------------------------------------------------
-  
+
 }
