@@ -29,6 +29,7 @@ Bug Fixes:
 General | G_AGUG: --allow-unauthenticated added for Stretch+ by default (inline with other G_AG commands)
 General | Resolved POSIX issues with dropbear (limitation) and SSH sessions. We now detect for presence of POSIX and set user selected locale during session load: https://github.com/Fourdee/DietPi/issues/1540
 General | Resolved multiple issues with failed GNU key management during APT installs from non-standard repos. Dirmngr is now installed on all DietPi systems by default: https://github.com/Fourdee/DietPi/issues/1388
+General | Resolved basic APT issues with Meveric's repo and failing dependencies. Debian repo is now used in the first instance: https://github.com/Fourdee/DietPi/pull/1571#issuecomment-369973745
 DietPi-Services | Service stop order is now reversed: https://github.com/Fourdee/DietPi/issues/1462#issue-294140894
 DietPi-Set_Hardware | Resolved issues with serial consoles not be disabled without dbus installed. Serial consoles are now masked/unmasked (previously disabled): https://github.com/Fourdee/DietPi/issues/1482
 DietPi-Software | Desktops: USB drive removed from .gtk-bookmarks as no longer used in DietPi.
